# BrightCpp

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
examples/: CMakeLists.txt
examples/practical_app/: main.cpp
examples/sample_game/: main.cpp
examples/simple_app/: main.cpp
include/brightcpp/: audio.hpp  brightcpp.hpp  color.hpp  common.hpp  geometry.hpp  handle_holder.hpp  image.hpp  image_decl.hpp  key.hpp  rect.hpp  render_target.hpp  renderer.hpp  renderer2d.hpp  rendertarget.hpp  window.hpp
include/brightcpp/internal/: glfw.hpp  linear_algebra.hpp  rendering.hpp  system.hpp  vulkan.hpp
include/brightcpp/internal/interfaces/: graphics.hpp  os_util.hpp
include/brightcpp/internal/vulkan/: common.hpp  render_proc.hpp  render_target.hpp  texture.hpp  vma.hpp
src/: CMakeLists.txt  audio.cpp  entity_holder.hpp  glfw.cpp  global_module.hpp  image.cpp  linear_algebra.hpp  object_container.hpp  oneshot_audio.cpp  render_target.cpp  renderer.cpp  renderer2d.cpp  rendering.hpp  system.cpp  system.hpp  vulkan.cpp  window.cpp
src/audio/: CMakeLists.txt  audio.cpp  audio_asset_manager.cpp  audio_asset_manager.hpp  audio_player_manager.cpp  audio_player_manager.hpp  mixer.cpp  mixer.hpp  oneshot_audio.cpp  player.hpp  player_normal.cpp  player_normal.hpp  resample.cpp  resample.hpp  streaming_audio_asset_manager.cpp  streaming_audio_asset_manager.hpp  streaming_audio_manager.cpp  streaming_audio_manager.hpp  streaming_manager.cpp  streaming_manager.hpp
src/audio/libsoundio/: CMakeLists.txt  CompileAsCpp.props  audio.cpp  audio.hpp  write_sample_func.hpp
src/audio/loader/: CMakeLists.txt  audio_loader.cpp  audio_loader.hpp  loader.hpp  loader_selector.cpp  loader_selector.hpp  mp3.cpp  mp3.hpp  ogg.cpp  ogg.hpp  wav.cpp  wav.hpp
src/audio/player/: CMakeLists.txt  player.hpp  player_normal.cpp  player_normal.hpp  player_streaming.cpp  player_streaming.hpp
src/glfw/: glfw.cpp  glfw.hpp  glfw_common.hpp
src/graphics/: CMakeLists.txt  image.cpp  renderer2d.cpp  renderer2d_middleware.cpp  renderer2d_middleware.hpp  shader_input.hpp  vbuffer.cpp  vbuffer.hpp
src/graphics/shaders/: shader.frag  shader.vert
src/graphics/vulkan/: CMakeLists.txt  graphics.cpp  graphics.hpp  render_target.cpp  render_target.hpp  renderer2d.cpp  renderer2d.hpp  rendertarget.hpp  rendertarget_factory.cpp  rendertarget_factory.hpp  texture.cpp  texture.hpp  texture_rendertarget.cpp  texture_rendertarget.hpp  util.cpp  util.hpp  vbuffer.cpp  vbuffer.hpp  vulkan_common.hpp  window_rendertarget.cpp  window_rendertarget.hpp
src/interfaces/: audio.hpp  graphics.hpp  os_util.hpp  renderer2d.hpp  rendertarget_factory.hpp  texture_factory.hpp  vbuffer_factory.hpp
src/key/: key.cpp  key.hpp  key_dummy.cpp  key_macos.cpp  key_windows.cpp  key_x11.cpp
src/libsoundio/: audio.cpp  audio.hpp
src/os/: CMakeLists.txt  window.cpp
src/os/glfw/: CMakeLists.txt  glfw.cpp  glfw.hpp
src/os/key/: CMakeLists.txt  key.cpp  key.hpp  key_dummy.cpp  key_macos.cpp  key_windows.cpp  key_x11.cpp
src/shaders/: shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
src/vulkan/: common.cpp  graphics.cpp  graphics.hpp  registration.cpp  registration.hpp  render_proc.cpp  render_proc.hpp  render_proc_2d.cpp  render_proc_2d.hpp  render_target.cpp  render_target.hpp  renderer2d.cpp  renderer2d.hpp  texture.cpp  texture.hpp  util.cpp  vbuffer.hpp  vma.hpp  vma_impl.cpp  vulkan.cpp  vulkan.hpp  vulkan_common.hpp  vulkan_util.cpp  vulkan_util.hpp
